# harbour-yast-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  harbour-ferniegram.desktop  harbour-fernschreiber2.desktop  harbour-fernschreiber2.pro  resources.qrc
.github/workflows/: main.yml  update-translations.yml
doc/: chat-folder-icons.md  development.md  fernschreiber-credits.md  tg_owt.md  translating.md
libs/: module_opal-sfpm.txt
libs/opal/sfpm/: qqmlsortfilterproxymodel.cpp
qml/: CallWindow.qml  harbour-ferniegram.qml  harbour-fernschreiber2.qml  harbour-yast-client.qml
qml/components/: AnimatedLoader.qml  AppNotification.qml  BackgroundImage.qml  BackgroundProgressIndicator.qml  ButtonsSectionHeader.qml  ChatActionIcon.qml  ChatBadges.qml  ChatHeaderText.qml  ChatListViewItem.qml  ChatNotificationsContextMenu.qml  ChatPhotoPreview.qml  ChatsView.qml  ContactSync.qml  CoverBackgroundImage.qml  CustomVideo.qml  InformationEditArea.qml  InformationTextItem.qml  MessageListViewItem.qml  MessagePropertiesLoader.qml  MessageableListItem.qml  MessagesView.qml  MultilineEmojiLabel.qml  NewMessageColumn.qml  OpaqueButton.qml  OpaqueIcon.qml  OpaqueItemBase.qml  OverviewPageHeader.qml  PhotoTextsGridItem.qml  PhotoTextsListItem.qml  PressEffect.qml  ProfilePictureList.qml  ProfileThumbnail.qml  RecentActorsList.qml  RoundedMask.qml  RoundedRect.qml  StickerSetOverlay.qml  TDLibChatListItem.qml  TDLibMessageSender.qml  TDLibPhoto.qml  TDLibSticker.qml  (+4 more)
qml/components/chat/: ChatBotSponsoredMessageItem.qml  ChatHeader.qml  ChatManagerLoader.qml  ChatPendingJoinRequestsItem.qml  InReplyToRow.qml  InlineQuery.qml  MessageContextMenu.qml  MessageData.qml  MessageInteractionReactions.qml  MessageListViewItem.qml  MessageListViewItemBase.qml  MessageListViewItemSimple.qml  MessageOverlayFlickable.qml  MessageReaction.qml  MessageViaLabel.qml  MessagesView.qml  NewMessageColumn.qml  PinnedMessageItem.qml  ReplyMarkupButtons.qml  SponsoredMessage.qml  StickerPicker.qml  StickerSetOverlay.qml  TopicsListView.qml  VoiceNoteOverlay.qml  WebPagePreview.qml
qml/components/chatInformationPage/: ChatInformationPageContent.qml  ChatInformationTabItemAudios.qml  ChatInformationTabItemBase.qml  ChatInformationTabItemChatsBase.qml  ChatInformationTabItemDebug.qml  ChatInformationTabItemFiles.qml  ChatInformationTabItemGifs.qml  ChatInformationTabItemGroupsInCommon.qml  ChatInformationTabItemLinks.qml  ChatInformationTabItemMedia.qml  ChatInformationTabItemMediaBase.qml  ChatInformationTabItemMediaGrid.qml  ChatInformationTabItemMediaList.qml  ChatInformationTabItemMembers.qml  ChatInformationTabItemMembersGroups.qml  (+7 more)
qml/cover/: CallCover.qml  CoverPage.qml
qml/dialogs/: AddContactDialog.qml  AddProxyDialog.qml  ArchiveChatListTutorialDialog.qml  AuthKeyDropDialog.qml  BackgroundSelectionDialog.qml  ChatJoinDialog.qml  ContactSupportDialog.qml  DurationPickerDialog.qml  InitializationDialog.qml  NewPollDialog.qml  SetBirthdateDialog.qml  WelcomeDialog.qml
qml/js/: debug.js  functions.js  twemoji.js
qml/pages/: AboutPage.qml  ArchivedChatsPage.qml  CallCover.qml  CallPage.qml  ChatInformationPage.qml  ChatPage.qml  ChatPendingJoinRequestsPage.qml  ChatPhotosPage.qml  ChatSelectionPage.qml  CoverPage.qml  CustomizeNotificationsPage.qml  DebugPage.qml  EmbeddedPlayerPage.qml  ImagePage.qml  InitializationPage.qml  MediaAlbumPage.qml  NewChatPage.qml  NotificationSoundSelectionPage.qml  OverviewPage.qml  PollResultsPage.qml  ProfilePicturesPage.qml  ProxiesPage.qml  SearchChatsPage.qml  SettingsPage.qml  TranslatePage.qml
rpm/: harbour-ferniegram.spec  harbour-fernschreiber2.spec  harbour-yast-client.changes  harbour-yast-client.spec
src/: appsettings.cpp  appsettings.h  asteroid-fernschreiber2.cpp  asteroidplatformapp.cpp  boolfiltermodel.cpp  boolfiltermodel.h  chatdata.cpp  chatdata.h  chatfoldersmodel.cpp  chatfoldersmodel.h  chatlistmodel.cpp  chatlistmodel.h  chatmanager.cpp  chatmanager.h  chatmodel.cpp  chatmodel.h  chatpermissionfiltermodel.cpp  chatpermissionfiltermodel.h  contactsmodel.cpp  contactsmodel.h  fernschreiberutils.cpp  fernschreiberutils.h  folderchatlistmodel.cpp  folderchatlistmodel.h  gstaudiorecorder.cpp  gstaudiorecorder.h  harbour-ferniegram.cpp  harbour-fernschreiber2.cpp  harbour-yast-client.cpp  invertedmessagesmodel.cpp  invertedmessagesmodel.h  invertedproxymodel.cpp  knownusersmodel.cpp  knownusersmodel.h  lottieitem.cpp  lottieitem.h  mainshared.h  mceinterface.cpp  mceinterface.h  mediamessagesmodel.cpp  (+38 more)
src/chat/: chatmanager.cpp  chatmanager.h  forumtopic.cpp  forumtopic.h  forumtopicsmodel.cpp  forumtopicsmodel.h  invertedmessagesmodel.h  jumpablemessagesmodel.cpp  jumpablemessagesmodel.h  mediamessagesmodel.cpp  mediamessagesmodel.h  messagedata.cpp  messagedata.h  messagesmodel.cpp  messagesmodel.h  readablemessagesmodel.cpp  readablemessagesmodel.h
src/tdlib/: tdlibreceiver.cpp  tdlibreceiver.h  tdlibwrapper.cpp  tdlibwrapper.h
translations/: harbour-ferniegram-de.ts  harbour-ferniegram-en.ts  harbour-ferniegram-es.ts  harbour-ferniegram-fi.ts  harbour-ferniegram-fr.ts  harbour-ferniegram-hu.ts  harbour-ferniegram-it.ts  harbour-ferniegram-pl.ts  harbour-ferniegram-ru.ts  harbour-ferniegram-sk.ts  harbour-ferniegram-sv.ts  harbour-ferniegram-zh_CN.ts  harbour-ferniegram.ts  harbour-fernschreiber-it.ts  harbour-fernschreiber2-de.ts  harbour-fernschreiber2-en.ts  harbour-fernschreiber2-es.ts  harbour-fernschreiber2-fi.ts  harbour-fernschreiber2-fr.ts  harbour-fernschreiber2-hu.ts  harbour-fernschreiber2-it.ts  harbour-fernschreiber2-pl.ts  harbour-fernschreiber2-ru.ts  harbour-fernschreiber2-sk.ts  harbour-fernschreiber2-sv.ts  harbour-fernschreiber2-zh_CN.ts  harbour-fernschreiber2.ts  harbour-yast-client-de.ts  harbour-yast-client-en.ts  harbour-yast-client-es.ts  harbour-yast-client-fi.ts  harbour-yast-client-fr.ts  harbour-yast-client-hu.ts  harbour-yast-client-it.ts  harbour-yast-client-pl.ts  harbour-yast-client-ru.ts  harbour-yast-client-sk.ts  harbour-yast-client-sv.ts  harbour-yast-client-zh_CN.ts  harbour-yast-client.ts
(+170 files in other folders)
